--- a/Sentiment_Analysis.Rmd
+++ b/Sentiment_Analysis.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "Natural-Language Processing"
-author: "Julio Gonzalez"
-date: "5/8/2018"
 output:
   html_document:
     css: bootstrap.min.css
@@ -30,12 +28,19 @@ library(plyr)
 library(ggplot2)
 library(readr)
 library(ggthemes)
+library(highcharter)
 ```
+[_Julio C. Gonzalez_](https://jcgonzalez14.github.io/) 
+
+_May 16, 2018_
 
 !Working Document!
+ 
+
+Add proposed reading time. 
 
 
-Hi there, the Stats Whisper here, presenting a whole new topic that is a hot commodity these days which is social network analysis and sentiment analysis. Believe it or not but social media can have a powerful impact on a business. Can you imagine a company losing $1.3 billion (not a typo, as in 1,300,000,000 bucks) for a single tweet? Well that was what reportely happened to Snapchat Inc. when Kylie Jenner tweeted about snapchat alegedly dropping their stock value by 7.5%. 
+Hi there, the Stats Whisperer here, back presenting a whole new topic that is a hot commodity these days which is sentiment analysis. Believe it or not but social media can have a powerful impact on a business. Can you imagine a company losing $1.3 billion (not a typo, as in 1,300,000,000 bucks) for a single tweet? Well that was what reportely happened to Snapchat Inc. when Kylie Jenner tweeted about snapchat alegedly dropping their stock value by 7.5%. 
 
 The amount of data genereated by social networks is safe to say enourmous. What if we could use that same data to find insightful information on consumer perspective on just about anything. Well that's exactly what we are going to do. 
 
@@ -43,17 +48,24 @@ The amount of data genereated by social networks is safe to say enourmous. What 
 
 #NLP for Movie Reviews
 
-Ever had a heated disscution with your friends about a particular movie or actor? While you have a strong distaste for anything Nicolas Cage, your "amigo" is in a infatuated trance with all of his movies. So what do you do when the next National Treseaure movie comes out? Naturally, you go, faute-de-mieux, online to investigate the reviews are for the movie. Well, I won't get into the particulars as to why of those movie reviews are flawed (actually [here](https://fivethirtyeight.com/features/ghostbusters-is-a-perfect-example-of-how-internet-ratings-are-broken/){target="_blank"} is a very detailed article expanding on this issue from my favorite statisically inclined website FiveThirtyEight) but one salient issue is that these reviews are one dimensional. All they do is give a score from 1 to 10 or 1 to 5 stars for a particular movie but they don't tell you _why_ they are given this score. Furthermore, these movie rating sites are highly correlated with each and here we have some data to confirm that. 
+Ever had a heated disscution with your friends about a particular movie or actor? While you have a strong distaste for anything Nicolas Cage, your "amigo" is in a infatuated trance with all of his movies. So what do you do when the next National Treseaure movie comes out? Naturally, you go, faute-de-mieux, online to investigate what the reviews are for the movie. Well, I won't get into the particulars as to why of those movie reviews are flawed (actually [here](https://fivethirtyeight.com/features/ghostbusters-is-a-perfect-example-of-how-internet-ratings-are-broken/){target="_blank"} is a very detailed article expanding on this issue from my favorite statisically inclined website FiveThirtyEight) but one salient issue is that these reviews are one dimensional. All they do is give a score from 1 to 10 or 1 to 5 stars for a particular movie but they don't tell you _why_ they are given this score. Sure, some people add a their opinion on the movie but who has time to read all of them? Furthermore, these movie rating sites are highly correlated with each and here we have some data to confirm that. 
 
 ```{r, warning=FALSE, message=FALSE}
 fandango <- read_csv("~/Documents/website/Sentiment-Analysis/fandango_score_comparison.csv")
-t1 = fandango[,-c(1,19:22)]
+t1 = fandango[,c(2:5)]
 corrplot(cor(t1), method="circle")
 ```
 
-In the above diagram, we did a simple correlation plot between the movie ratings given by the major movie review sites and found all of them to be highly correlated with each other. For those non-stats heads out there, a correlation plot deploys a simple staticical algorithm known as the Pearson correlation value that finds how correlated two variables are to each other. There several ways this formula can be written but here is one that I think makes the more intuitive sense. $$r = \frac{\sum_{i = 1}^{n}(x_i - \bar{x})(y_i - \bar{y})}{\sqrt{\sum_{i = 1}^{n}(x_i - \bar{x})^2}\sqrt{\sum_{i = 1}^{n}(y_i - \bar{y})^2}}$$ The scale falls between -1 and 1 (inclusive) where a value of -1 means that the direc
+In the above diagram, we did a simple correlation plot between the movie ratings given by the major movie review sites and found all of them to be highly correlated with each other. For those non-stats heads out there, a correlation plot deploys a simple staticical algorithm known as the Pearson correlation value that finds how correlated two variables are to each other. There are several ways this formula can be written but here is one that I think makes the more intuitive sense. $$r = \frac{\sum_{i = 1}^{n}(x_i - \bar{x})(y_i - \bar{y})}{\sqrt{\sum_{i = 1}^{n}(x_i - \bar{x})^2}\sqrt{\sum_{i = 1}^{n}(y_i - \bar{y})^2}}$$ The scale falls between -1 and 1 (inclusive) where a value of -1 means that the direc
 
-I propose a solution: why don't we use the massive amount of user generated data of social networks to try and understand what are the reasons a user feels a certain way towards a movie. In addition, we might be able to extract what elements of movies makes it more likely for a good review.
+I propose a solution: why don't we use the massive amount of user generated data of social networks to try and understand what are the reasons a user _feels_ a certain way towards a movie. Instead of using the small sample size of the users on movie review sites, let's include a larger, more diverse and a more representive sample of what the average paying customer that drives films success. In addition, we might be able to extract what elements of movies makes it more likely for a good review.
+
+In order to do that we would be using natural language processing. The following diagram gives a rough explaination as to what encompases NLP and how it is divided. There are other areas where NLP has application significance but for the most part it falls under these two categories.
+
+![Natural Language Processing Diagram](NLP_diagram.png)
+
+Our focus will be the utilization of sentiment analysis but we will also use NLP to clean up the syntax of the data using stopword removal.
+
 
 Paradoxially, in order for someone to give a horror movie a high rating is by being scared out of your socks. 
 
@@ -83,7 +95,7 @@ deadpool1 = rbind(DP_051618,DP_051718)
 
 
 Let's take a closer look at the data.
-```{r}
+```{r, warning=FALSE}
 head(deadpool1)
 ``` 
 
@@ -96,21 +108,21 @@ Here is also some summary statistcs.
 
 By giving the data a quick glance, we see that our data captures a particular tweet that went viral leading up to the movie premiere.
 
-![Here is that tweet. Our data captures some of the retweets that made this tweet go viral.](tweet.png)
+![Here is that tweet. Our data captures some of the retweets that made this tweet go viral.](dp_tweet.png)
 
 <br>
 
 #Regular Expression
 
-Now for the good stuff. First, we will create a vector that conains all of the text from the tweets. 
-```{r}
-twtxt <- deadpool1$text     # Collect text for sentiment analysis.
-``` 
+Every now and then, I like to include special topics (like regular expression) that don't strictly fall under the subject at hand (NLP in this case) per se, but has some value when used in conjunction. 
 
-We will see that the tweets are "dirty" meaning that they contain unusefull information that is not needed to do sentiment analysis. In order to clean them up, we will use something called [regular expressions](http://stat.ethz.ch/R-manual/R-devel/library/base/html/regex.html){target="_blank"}. You can think of regular expression as a very powerful string search language that can be used to replace individual or entire sections of text.
+Going back to our data. First, we will create a vector that conains all of the text from the tweets. 
+
+We will see that the tweets are "dirty" meaning that they contain unusefull information that is not needed to do sentiment analysis. In order to clean them up, we will use something called [regular expressions](https://en.wikipedia.org/wiki/Regular_expression){target="_blank"}. You can think of regular expression as a very powerful string search language that can be used to replace individual letters or entire sections of text.
 
 For example, this the text for the viral aforementioned tweet.
 ```{r}
+twtxt <- deadpool1$text     # Collect text for sentiment analysis.
 twtxt[2] 
 ``` 
 
@@ -166,33 +178,48 @@ Now we get to the meat and potatoes of NLP and apply sentiment analysis to the o
 final <- data.frame(text=sapply(mycorpus, identity), stringsAsFactors=F)
 sent_combo <- sentiment(final$text)     # Pull sentiment.
 sent_combo
-
+?sentiment
 ``` 
 
 Here every row represents the output of the sentiment analysis for all of the 34,000 tweets where the "sentiment" column displays the score given to that particular tweet. 
 
-```{r}
+```{r, eval=FALSE}
 mean(sent_combo$sentiment)     # average sentiment
 ``` 
 
-Finally, we find that average sentiment falls at 0.0562 which is slightly but not greatly positive. 
+Finally, we find that average sentiment falls at 0.0562 which is just slightly positive. 
 
 Here we see it visually.
-```{r}
+```{r, echo=FALSE}
 # Sentiment per Tweet
 aggtwitter <- aggregate(sent_combo$sentiment, by=list(sent_combo$element_id), FUN=mean)
 
-#line graph
-ggplot(data=aggtwitter, aes(x=Group.1, y=x)) + geom_bar(stat="identity") +
-ggtitle("Sentiment per Tweet") + labs(x="Tweet", y="Sentiment Score") + theme_solarized_2(light = FALSE)
+#line graph (couldn't use highcharts)
+ggplot(data=aggtwitter,aes(x=Group.1, y=x))+geom_bar(stat="identity", fill="#EA1313") +
+ggtitle("Sentiment per Tweet") + labs(x="Tweet", y="Sentiment Score") + theme_dark()
 
-#histogram
-ggplot(data=aggtwitter, aes(x))+geom_histogram(bins = 10) +theme_solarized_2(light = FALSE)
 ``` 
 
-As explained previously, you will get different results based on the sentiment dictionary you are using. Here we will be using syuzhet dictionary.
+Here we see the sentiment score ploted across all of our tweets. We observe a few crazy scores here and there but for the most part we see that most tweets are neutral.
 
-```{r}
+```{r,echo=FALSE}
+#histogram
+ggplot(data=aggtwitter, aes(x))+geom_histogram(bins = 10, fill="#EA1313", color = "grey") + theme_dark() + labs(x="Sentiment Score",y="Count")
+
+
+hchart(aggtwitter$x, color = "#B71C1C", name = "Price") %>% 
+  hc_title(text = "You can zoom me")
+
+h2 <- hist(aggtwitter$x, breaks = 20, plot = FALSE)
+hchart(h2)
+``` 
+Feel free to zoom into the histogram.
+
+This histogram comfirms our previous point.
+
+As explained previously, you will get different results based on the sentiment dictionary you are using. Here, we will be using syuzhet dictionary.
+
+```{r, eval=FALSE}
 sent_syuzhet <- get_sentiment(final$text, method="syuzhet")     # method="bing", "afinn", "nrc", "stanford" 
 
 df = data.frame(sent_syuzhet)
@@ -200,19 +227,51 @@ ggplot(df,aes(sent_syuzhet))+geom_histogram(bins = 10)
 mean(sent_syuzhet)     # average sentiment
 ``` 
 
-Now let's go a little further than just positive and negative.
+Using the syuzhet dictionary, we now get an average sentiment score of about 0.2 which is not that much terribly more than when we used previously. 
+
+Generally, it is expected that the ratio between positive and negative will be correlated with the movie review which is great but not very insightful. We can actually go at a much deeper level by acquiring a sentiment score of more particular kind of emotions. We can achieve that by using the NCR dictionary where each tweet results in a score to 8 additional categories that now include sentiments like: anger, anticipation, disgust, fear, joy, sadness and trust. 
+
 ```{r, eval=FALSE}
-sent_nrc <- syuzhet::get_nrc_sentiment(final$text)     # Get more detailed sentiment.
+sent_nrc <- get_nrc_sentiment(final$text)     # Get more detailed sentiment.
 head(sent_nrc)
 
 sentsum <- colSums(sent_nrc)
 df_nrc = data.frame(sentsum)
 df_nrc$sentiments = rownames(df_nrc)
-
-ggplot(df_nrc, aes(sentiments,sentsum)) + geom_col()
-ggplot(df_nrc[9:10,], aes(sentiments,sentsum)) + geom_col()
 ``` 
 
+
+```{r, eval=FALSE}
+#changing options to replace space with comma
+hcoptslang <- getOption("highcharter.lang")
+hcoptslang$thousandsSep <- ","
+options(highcharter.lang = hcoptslang)
+
+#plots all the sentiments
+highchart() %>% 
+  hc_add_series(data = df_nrc, type = "column", showInLegend = FALSE, name = "Total Value", hcaes(x = sentiments, y = sentsum, color = sentiments)) %>%
+  hc_xAxis(categories = df_nrc$sentiments,
+           title = list(
+             text = "Sentiments"
+           )
+  ) %>%
+  hc_yAxis(title =list(text = "Sum of Sentiments")) %>%
+  hc_add_theme(hc_theme_darkunica()) %>%
+  hc_chart(options3d = list(enabled = TRUE, beta = 20))
+
+
+#Negative vs Positive Only
+highchart() %>% 
+  hc_add_series(data = df_nrc[9:10,], type = "column", showInLegend = FALSE, name = "Total Value", hcaes(x = sentiments, y = sentsum, color = sentiments)) %>%
+  hc_xAxis(categories = df_nrc[9:10,]$sentiments,
+           title = list(
+             text = "Sentiments"
+           )
+  ) %>%
+  hc_yAxis(title =list(text = "Sum of Sentiments")) %>%
+  hc_add_theme(hc_theme_darkunica()) %>%
+  hc_chart(options3d = list(enabled = TRUE, beta = 20))
+```
 
 
 
@@ -253,7 +312,7 @@ mycorpus2 <- tm_map(mycorpus2, removeWords, c("deadpool")) # Remove other words.
 wordcloud(mycorpus2, scale=c(5, 0.5), max.words=100, random.order=F, rot.per=0.35, use.r.layout=F, colors=brewer.pal(8, "Dark2"))
 ``` 
 
-```{r}
+```{r,eval=FALSE}
 # Perform the sentiment analysis on Tweets.
 final2 <- data.frame(text=sapply(mycorpus2, identity), stringsAsFactors=F)
 sent_combo2 <- sentiment(final2$text)    # Pull sentiment.
@@ -263,7 +322,7 @@ mean(sent_combo2$sentiment)    # average sentiment
 
 
 
-```{r}
+```{r, eval=FALSE}
 # Sentiment per Tweet
 aggtwitter2 <- aggregate(sent_combo2$sentiment, by=list(sent_combo2$element_id), FUN=mean)
 
@@ -275,7 +334,7 @@ ggtitle("Sentiment per Tweet") + labs(x="Tweet", y="Sentiment Score") + theme_so
 ggplot(data=aggtwitter2, aes(x))+geom_histogram(bins = 10) +theme_solarized_2(light = FALSE)
 ``` 
 
-```{r}
+```{r, eval=FALSE}
 sent_syuzhet2 <- get_sentiment(final2$text, method="syuzhet")     # method="bing", "afinn", "nrc", "stanford" 
 
 df = data.frame(sent_syuzhet2)
@@ -285,12 +344,37 @@ mean(sent_syuzhet2)     # average sentiment
 
 ```{r, eval=FALSE}
 sent_nrc2 <- syuzhet::get_nrc_sentiment(final2$text)     # Get more detailed sentiment.
-head(sent_nrc2)
 
 sentsum2 <- colSums(sent_nrc2)
 df_nrc2 = data.frame(sentsum2)
 df_nrc2$sentiments = rownames(df_nrc2)
 
-ggplot(df_nrc2, aes(sentiments,sentsum)) + geom_col()
-ggplot(df_nrc2[9:10,], aes(sentiments,sentsum)) + geom_col()
+ggplot(df_nrc2, aes(sentiments,sentsum2)) + geom_col()
+ggplot(df_nrc2[9:10,], aes(sentiments,sentsum2)) + geom_col()
 ``` 
+
+
+Using NLP with social media data is a different type of approach to movie reviews and one in which one can argue provides a closer and more organic assessment of public perception towards a particular film.
+
+Since social networks are perpetually genereting data, they provide a more real time information stream of the consumer's preferences akin to how a company's stock value is a measure of its performance. Instead of the traditional approach where one sees a movie then writes a review one time, we have a constant feed  
+
+Thinking on a much larger scale, we can expand this to include multiple social networks that include even more niche users like Reddit, Quora and even comments on YouTube and do comparisons across networks. Furthermore, since the production of a movie incorborates people who are continously in the public's eye, we can observe the effect of an important event in an actor's life outside of films sort of like how music sales shoot through the roof in the aftermath of an artist's death.
+
+To bring this home, Basically, we have unprecidented access to a multi facet view towards the film industry. In truth, while we now have more data avaialble, extracting the signal rather than the noise from this data is, even today, an incrediably difficult task. If you pile privacy concerns on top of that, it can really get messy. Sure movie production companies with deep pockets can use this infomation for to improve their bottom line, but the question is _should_ they have access to this type of intimate information. Who knew that a simple tweet provides so much information about you.
+
+In the words of Peter Parker in rememberance to his uncle Ben at the end of the spider-man movie,
+
+> ["With great power comes, great responsibility."](https://www.youtube.com/watch?v=kb4jEHmH_kU){target="_blank"}
+
+
+Thanks for reading.
+
+
+
+
+
+
+
+
+
+
